Added the 'New List' button and some functionalities

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/fc2f0cdae5.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DoingTime</title>
 </head>
 <body>
-  
+  <div class="left-panel">
+    <nav class="btn-bar">
+      <button class="buttons" id="add-list-btn"><i class="fa-solid fa-plus"></i> New List</button>
+      <button class="buttons" id="filter-btn"><i class="fa-solid fa-filter"></i></button>
+    </nav>
+    <div class="new-list-container">
+      <div class="wrapper">
+        <input type="text" class="inputs" id="list-name" placeholder="List name..." required>
+        <button class="buttons" id="close-list-btn"><i class="fa-solid fa-xmark"></i></button>
+      </div>
+      <ul class="requirements">
+        
+      </ul>
+    </div>
+  </div>
+  <div class="right-panel">
+    
+  </div>
 </body>
 </html>
