updated the tasks to be rendered, but need to be fixed

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
 
   <div class="left-panel">
 
-    <!-- @@@@@ uper navigation panel @@@@@ -->
+    <!-- @@@@@ upper navigation panel @@@@@ -->
     <div class="main-container">
       <div class="today-upcoming-container" id="tuc">
         <div class="list" id="today">
@@ -81,7 +81,7 @@
             <div class="wrapping flex" id="wrap-two">
               <h3 class="semi-bold" style="margin-top: 3px">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </h1>
+              </h3>
               <button class="buttons" id="delete-task-icon">
                 <i class="fa-regular fa-trash-can"></i>
               </button>
