--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="x-icon" href="./doing-time-favicon.png">
   <script src="https://kit.fontawesome.com/fc2f0cdae5.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +56,7 @@
   <div class="right-panel">
     <!-- @@@@@ main navigation panel @@@@@ -->
      <div class="nav-panel" id="nav-panel">
-        <div class="header-wrapper">
+        <!-- <div class="header-wrapper">
           <div class="text-btn-wrap">
             <h1 class="semi-bold"><i class="fa-solid fa-cube" style="color: #166AC5"></i> Carol Gostosa</h1>
             <button class="buttons" id="delete-list-icon">
@@ -89,7 +90,7 @@
       
           </div>
 
-        </div>
+        </div> -->
      </div>
 
     <!-- @@@@@ bottom navigation bar @@@@@ -->
