--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="shortcut icon" type="x-icon" href="./doing-time-favicon.png">
+  <link rel="shortcut icon" type="x-icon" href="5fcfaca091ab2e9405ca.png">
   <script src="https://kit.fontawesome.com/fc2f0cdae5.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DoingTime</title>
-</head>
+<script defer src="main.js"></script></head>
 <body style="display: flex">
 
   <div class="left-panel">
